--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,10 @@ upstream blockchain {
     server 104.211.96.209:3001;
 }
 
+upstream blockchainadmin {
+    server 104.211.96.209:4000;
+}
+
 upstream ionic {
     server localhost:4000;
 }
@@ -13,6 +17,24 @@ upstream react {
 server {
     listen 80;
 
+    location ~ (/api/queries/getTasksForVessel) {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_buffers 8 256k;
+        proxy_redirect off;
+	proxy_pass http://blockchainadmin;
+        break;
+    }
+
+    location /api/system/identities/issue {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_buffers 8 256k;
+        proxy_redirect off;
+	proxy_pass http://blockchainadmin;
+        break;
+    }
+
     location /mapoperations {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
@@ -21,7 +43,7 @@ server {
 	proxy_pass http://ionic;
     }
 
-    location ~ (api|/auth/local|/success|/error) {
+    location ~ (api/wallet/import|/auth/local|/success|/error) {
 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_buffers 8 256k;
